Deployment : linted package json

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "git-scripts": "^0.2.1",
-    "surge": "^0.20.1"
-  },
-  "devDependencies": { "surge": "latest", "git-scripts": "0.2.1" }, "git": { "scripts": { "pre-push": "surge --project ./ --domain http://humdrum-ship.surge.sh/" } } 
+    "surge": "^0.20.1",
+    "git": { "scripts": { "pre-push": "surge --project ./ --domain http://humdrum-ship.surge.sh/" } } 
+  }
 }
