--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "react-stripe-checkout": "^2.6.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=2000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -28,7 +30,7 @@
     "git-scripts": "^0.2.1",
     "surge": "^0.20.1"
   },
-  "git" : {
+  "git": {
     "scripts": {
       "pre-push": "npm run-script build && surge --project ./build --domain http:/keepAhead.surge.sh"
     }
